--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "array-move": "^4.0.0",
+    "chart.js": "^3.6.0",
+    "chartjs-plugin-annotation": "^1.0.2",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-grid-layout": "^1.3.0",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "react-sortable-hoc": "^2.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
