--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@progress/kendo-react-dialogs": "^4.10.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,11 +13,16 @@
     "chart.js": "^3.6.0",
     "chartjs-plugin-annotation": "^1.0.2",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-chartjs-2": "^3.3.0",
+    "react-dnd": "^9.4.0",
+    "react-dnd-html5-backend": "^9.4.0",
     "react-dom": "^17.0.2",
+    "react-list-drag-and-drop": "^0.9.2",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "react-sortable-hoc": "^2.0.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
